feat: Initialized Vaadin project

--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "no-name",
-  "license": "UNLICENSED",
   "dependencies": {
+    "@polymer/iron-a11y-announcer": "3.0.2",
+    "@polymer/iron-a11y-keys-behavior": "3.0.1",
+    "@polymer/iron-fit-behavior": "3.0.2",
+    "@polymer/iron-flex-layout": "3.0.1",
     "@polymer/iron-icon": "3.0.1",
+    "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/iron-list": "3.1.0",
+    "@polymer/iron-media-query": "3.0.1",
+    "@polymer/iron-meta": "3.0.1",
+    "@polymer/iron-overlay-behavior": "3.0.3",
+    "@polymer/iron-resizable-behavior": "3.0.1",
+    "@polymer/iron-scroll-target-behavior": "3.0.1",
     "@polymer/polymer": "3.2.0",
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
-    "@vaadin/router": "1.7.2",
+    "@vaadin/router": "1.7.4",
     "@vaadin/vaadin-accordion": "20.0.0",
     "@vaadin/vaadin-app-layout": "20.0.0",
     "@vaadin/vaadin-avatar": "20.0.0",
@@ -18,6 +26,7 @@
     "@vaadin/vaadin-combo-box": "20.0.0",
     "@vaadin/vaadin-confirm-dialog": "20.0.0",
     "@vaadin/vaadin-context-menu": "20.0.0",
+    "@vaadin/vaadin-control-state-mixin": "20.0.0",
     "@vaadin/vaadin-cookie-consent": "20.0.0",
     "@vaadin/vaadin-core-shrinkwrap": "20.0.3",
     "@vaadin/vaadin-crud": "20.0.0",
@@ -25,13 +34,16 @@
     "@vaadin/vaadin-date-picker": "20.0.0",
     "@vaadin/vaadin-date-time-picker": "20.0.0",
     "@vaadin/vaadin-details": "20.0.0",
+    "@vaadin/vaadin-development-mode-detector": "2.0.4",
     "@vaadin/vaadin-dialog": "20.0.0",
+    "@vaadin/vaadin-element-mixin": "20.0.0",
     "@vaadin/vaadin-form-layout": "20.0.0",
     "@vaadin/vaadin-grid": "20.0.0",
     "@vaadin/vaadin-grid-pro": "20.0.0",
     "@vaadin/vaadin-icons": "20.0.0",
     "@vaadin/vaadin-item": "20.0.0",
     "@vaadin/vaadin-list-box": "20.0.0",
+    "@vaadin/vaadin-list-mixin": "20.0.0",
     "@vaadin/vaadin-login": "20.0.0",
     "@vaadin/vaadin-lumo-styles": "20.0.0",
     "@vaadin/vaadin-material-styles": "20.0.0",
@@ -39,6 +51,7 @@
     "@vaadin/vaadin-messages": "20.0.0",
     "@vaadin/vaadin-notification": "20.0.0",
     "@vaadin/vaadin-ordered-layout": "20.0.0",
+    "@vaadin/vaadin-overlay": "20.0.0",
     "@vaadin/vaadin-progress-bar": "20.0.0",
     "@vaadin/vaadin-radio-button": "20.0.0",
     "@vaadin/vaadin-rich-text-editor": "20.0.0",
@@ -47,8 +60,11 @@
     "@vaadin/vaadin-split-layout": "20.0.0",
     "@vaadin/vaadin-tabs": "20.0.0",
     "@vaadin/vaadin-text-field": "20.0.0",
+    "@vaadin/vaadin-themable-mixin": "20.0.0",
     "@vaadin/vaadin-time-picker": "20.0.0",
     "@vaadin/vaadin-upload": "20.0.0",
+    "@vaadin/vaadin-usage-statistics": "2.1.0",
+    "@webcomponents/shadycss": "1.9.6",
     "construct-style-sheets-polyfill": "2.4.16",
     "lit-element": "2.5.1",
     "lit-html": "1.4.1",
@@ -83,12 +99,24 @@
     "workbox-precaching": "6.1.0",
     "workbox-webpack-plugin": "6.1.0"
   },
+  "license": "UNLICENSED",
+  "name": "no-name",
   "vaadin": {
     "dependencies": {
+      "@polymer/iron-a11y-announcer": "3.0.2",
+      "@polymer/iron-a11y-keys-behavior": "3.0.1",
+      "@polymer/iron-fit-behavior": "3.0.2",
+      "@polymer/iron-flex-layout": "3.0.1",
       "@polymer/iron-icon": "3.0.1",
+      "@polymer/iron-iconset-svg": "3.0.1",
       "@polymer/iron-list": "3.1.0",
+      "@polymer/iron-media-query": "3.0.1",
+      "@polymer/iron-meta": "3.0.1",
+      "@polymer/iron-overlay-behavior": "3.0.3",
+      "@polymer/iron-resizable-behavior": "3.0.1",
+      "@polymer/iron-scroll-target-behavior": "3.0.1",
       "@polymer/polymer": "3.2.0",
-      "@vaadin/router": "1.7.2",
+      "@vaadin/router": "1.7.4",
       "@vaadin/vaadin-accordion": "20.0.0",
       "@vaadin/vaadin-app-layout": "20.0.0",
       "@vaadin/vaadin-avatar": "20.0.0",
@@ -99,6 +127,7 @@
       "@vaadin/vaadin-combo-box": "20.0.0",
       "@vaadin/vaadin-confirm-dialog": "20.0.0",
       "@vaadin/vaadin-context-menu": "20.0.0",
+      "@vaadin/vaadin-control-state-mixin": "20.0.0",
       "@vaadin/vaadin-cookie-consent": "20.0.0",
       "@vaadin/vaadin-core-shrinkwrap": "20.0.3",
       "@vaadin/vaadin-crud": "20.0.0",
@@ -106,13 +135,16 @@
       "@vaadin/vaadin-date-picker": "20.0.0",
       "@vaadin/vaadin-date-time-picker": "20.0.0",
       "@vaadin/vaadin-details": "20.0.0",
+      "@vaadin/vaadin-development-mode-detector": "2.0.4",
       "@vaadin/vaadin-dialog": "20.0.0",
+      "@vaadin/vaadin-element-mixin": "20.0.0",
       "@vaadin/vaadin-form-layout": "20.0.0",
       "@vaadin/vaadin-grid": "20.0.0",
       "@vaadin/vaadin-grid-pro": "20.0.0",
       "@vaadin/vaadin-icons": "20.0.0",
       "@vaadin/vaadin-item": "20.0.0",
       "@vaadin/vaadin-list-box": "20.0.0",
+      "@vaadin/vaadin-list-mixin": "20.0.0",
       "@vaadin/vaadin-login": "20.0.0",
       "@vaadin/vaadin-lumo-styles": "20.0.0",
       "@vaadin/vaadin-material-styles": "20.0.0",
@@ -120,6 +152,7 @@
       "@vaadin/vaadin-messages": "20.0.0",
       "@vaadin/vaadin-notification": "20.0.0",
       "@vaadin/vaadin-ordered-layout": "20.0.0",
+      "@vaadin/vaadin-overlay": "20.0.0",
       "@vaadin/vaadin-progress-bar": "20.0.0",
       "@vaadin/vaadin-radio-button": "20.0.0",
       "@vaadin/vaadin-rich-text-editor": "20.0.0",
@@ -128,8 +161,11 @@
       "@vaadin/vaadin-split-layout": "20.0.0",
       "@vaadin/vaadin-tabs": "20.0.0",
       "@vaadin/vaadin-text-field": "20.0.0",
+      "@vaadin/vaadin-themable-mixin": "20.0.0",
       "@vaadin/vaadin-time-picker": "20.0.0",
       "@vaadin/vaadin-upload": "20.0.0",
+      "@vaadin/vaadin-usage-statistics": "2.1.0",
+      "@webcomponents/shadycss": "1.9.6",
       "construct-style-sheets-polyfill": "2.4.16",
       "lit-element": "2.5.1",
       "lit-html": "1.4.1"
@@ -159,6 +195,6 @@
       "workbox-precaching": "6.1.0",
       "workbox-webpack-plugin": "6.1.0"
     },
-    "hash": "ea487f45266d04fd74b53ccebd0369a2743730eccd9d605813262d87a0f2bb99"
+    "hash": "abdc907f5f45a94bbe752f8093af09ceb35513f552915169a1dbf36c8150ed8d"
   }
 }
