feat: Updated HTTP Creeper view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,9 @@ server.port=${PORT:8084}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-# To improve the performance during development. 
+com.seacreeper.scribes.baseUrl = http://localhost:8085/
+
+# To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
 vaadin.pnpm.enable=false
-
-com.seacreeper.scribes.influxdb.host=http://docker.home.zxcv32.com
-com.seacreeper.scribes.influxdb.port=8086
-com.seacreeper.scribes.influxdb.bucket=scribes
-com.seacreeper.scribes.influxdb.org=seacreeper
-# Pass token using other spring ways
-com.seacreeper.scribes.influxdb.token=
