--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=${PORT:8084}
-logging.level.org.atmosphere = warn
-spring.mustache.check-template-location = false
-
-com.seacreeper.scribes.baseUrl = http://localhost:8085/
-
+logging.level.org.atmosphere=warn
+spring.mustache.check-template-location=false
+# User Identification Token
+seacreeper.craftsperson.user.token=crafter
+seacreeper.scribes.baseUrl=http://localhost:8085/
+seacreeper.queen.baseUrl=http://localhost:8080/
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
