feat: Update project

--- a/package.json
+++ b/package.json
@@ -16,53 +16,53 @@
     "@vaadin/flow-frontend": "./target/flow-frontend",
     "@vaadin/form": "./target/flow-frontend/form",
     "@vaadin/router": "1.7.4",
-    "@vaadin/vaadin-accordion": "20.0.0",
-    "@vaadin/vaadin-app-layout": "20.0.0",
-    "@vaadin/vaadin-avatar": "20.0.0",
-    "@vaadin/vaadin-board": "20.0.0",
-    "@vaadin/vaadin-button": "20.0.0",
-    "@vaadin/vaadin-charts": "20.0.0",
-    "@vaadin/vaadin-checkbox": "20.0.0",
-    "@vaadin/vaadin-combo-box": "20.0.0",
-    "@vaadin/vaadin-confirm-dialog": "20.0.0",
-    "@vaadin/vaadin-context-menu": "20.0.0",
-    "@vaadin/vaadin-control-state-mixin": "20.0.0",
-    "@vaadin/vaadin-cookie-consent": "20.0.0",
-    "@vaadin/vaadin-core-shrinkwrap": "20.0.3",
-    "@vaadin/vaadin-crud": "20.0.0",
-    "@vaadin/vaadin-custom-field": "20.0.0",
-    "@vaadin/vaadin-date-picker": "20.0.0",
-    "@vaadin/vaadin-date-time-picker": "20.0.0",
-    "@vaadin/vaadin-details": "20.0.0",
+    "@vaadin/vaadin-accordion": "20.0.5",
+    "@vaadin/vaadin-app-layout": "20.0.5",
+    "@vaadin/vaadin-avatar": "20.0.5",
+    "@vaadin/vaadin-board": "20.0.5",
+    "@vaadin/vaadin-button": "20.0.5",
+    "@vaadin/vaadin-charts": "20.0.5",
+    "@vaadin/vaadin-checkbox": "20.0.5",
+    "@vaadin/vaadin-combo-box": "20.0.5",
+    "@vaadin/vaadin-confirm-dialog": "20.0.5",
+    "@vaadin/vaadin-context-menu": "20.0.5",
+    "@vaadin/vaadin-control-state-mixin": "20.0.5",
+    "@vaadin/vaadin-cookie-consent": "20.0.5",
+    "@vaadin/vaadin-core-shrinkwrap": "20.0.8",
+    "@vaadin/vaadin-crud": "20.0.5",
+    "@vaadin/vaadin-custom-field": "20.0.5",
+    "@vaadin/vaadin-date-picker": "20.0.5",
+    "@vaadin/vaadin-date-time-picker": "20.0.5",
+    "@vaadin/vaadin-details": "20.0.5",
     "@vaadin/vaadin-development-mode-detector": "2.0.4",
-    "@vaadin/vaadin-dialog": "20.0.0",
-    "@vaadin/vaadin-element-mixin": "20.0.0",
-    "@vaadin/vaadin-form-layout": "20.0.0",
-    "@vaadin/vaadin-grid": "20.0.0",
-    "@vaadin/vaadin-grid-pro": "20.0.0",
-    "@vaadin/vaadin-icons": "20.0.0",
-    "@vaadin/vaadin-item": "20.0.0",
-    "@vaadin/vaadin-list-box": "20.0.0",
-    "@vaadin/vaadin-list-mixin": "20.0.0",
-    "@vaadin/vaadin-login": "20.0.0",
-    "@vaadin/vaadin-lumo-styles": "20.0.0",
-    "@vaadin/vaadin-material-styles": "20.0.0",
-    "@vaadin/vaadin-menu-bar": "20.0.0",
-    "@vaadin/vaadin-messages": "20.0.0",
-    "@vaadin/vaadin-notification": "20.0.0",
-    "@vaadin/vaadin-ordered-layout": "20.0.0",
-    "@vaadin/vaadin-overlay": "20.0.0",
-    "@vaadin/vaadin-progress-bar": "20.0.0",
-    "@vaadin/vaadin-radio-button": "20.0.0",
-    "@vaadin/vaadin-rich-text-editor": "20.0.0",
-    "@vaadin/vaadin-select": "20.0.0",
-    "@vaadin/vaadin-shrinkwrap": "20.0.3",
-    "@vaadin/vaadin-split-layout": "20.0.0",
-    "@vaadin/vaadin-tabs": "20.0.0",
-    "@vaadin/vaadin-text-field": "20.0.0",
-    "@vaadin/vaadin-themable-mixin": "20.0.0",
-    "@vaadin/vaadin-time-picker": "20.0.0",
-    "@vaadin/vaadin-upload": "20.0.0",
+    "@vaadin/vaadin-dialog": "20.0.5",
+    "@vaadin/vaadin-element-mixin": "20.0.5",
+    "@vaadin/vaadin-form-layout": "20.0.5",
+    "@vaadin/vaadin-grid": "20.0.5",
+    "@vaadin/vaadin-grid-pro": "20.0.5",
+    "@vaadin/vaadin-icons": "20.0.5",
+    "@vaadin/vaadin-item": "20.0.5",
+    "@vaadin/vaadin-list-box": "20.0.5",
+    "@vaadin/vaadin-list-mixin": "20.0.5",
+    "@vaadin/vaadin-login": "20.0.5",
+    "@vaadin/vaadin-lumo-styles": "20.0.5",
+    "@vaadin/vaadin-material-styles": "20.0.5",
+    "@vaadin/vaadin-menu-bar": "20.0.5",
+    "@vaadin/vaadin-messages": "20.0.5",
+    "@vaadin/vaadin-notification": "20.0.5",
+    "@vaadin/vaadin-ordered-layout": "20.0.5",
+    "@vaadin/vaadin-overlay": "20.0.5",
+    "@vaadin/vaadin-progress-bar": "20.0.5",
+    "@vaadin/vaadin-radio-button": "20.0.5",
+    "@vaadin/vaadin-rich-text-editor": "20.0.5",
+    "@vaadin/vaadin-select": "20.0.5",
+    "@vaadin/vaadin-shrinkwrap": "20.0.8",
+    "@vaadin/vaadin-split-layout": "20.0.5",
+    "@vaadin/vaadin-tabs": "20.0.5",
+    "@vaadin/vaadin-text-field": "20.0.5",
+    "@vaadin/vaadin-themable-mixin": "20.0.5",
+    "@vaadin/vaadin-time-picker": "20.0.5",
+    "@vaadin/vaadin-upload": "20.0.5",
     "@vaadin/vaadin-usage-statistics": "2.1.0",
     "@webcomponents/shadycss": "1.9.6",
     "construct-style-sheets-polyfill": "2.4.16",
@@ -89,15 +89,15 @@
     "loader-utils": "2.0.0",
     "ts-loader": "8.0.12",
     "typescript": "4.2.3",
-    "validator": "13.1.17",
+    "validator": "^13.7.0",
     "webpack": "4.46.0",
-    "webpack-cli": "3.3.11",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "3.0.0",
     "webpack-merge": "4.2.2",
-    "workbox-core": "6.1.0",
-    "workbox-precaching": "6.1.0",
-    "workbox-webpack-plugin": "6.1.0"
+    "workbox-core": "6.2.0",
+    "workbox-precaching": "6.2.0",
+    "workbox-webpack-plugin": "6.2.0"
   },
   "license": "UNLICENSED",
   "name": "no-name",
@@ -117,53 +117,53 @@
       "@polymer/iron-scroll-target-behavior": "3.0.1",
       "@polymer/polymer": "3.2.0",
       "@vaadin/router": "1.7.4",
-      "@vaadin/vaadin-accordion": "20.0.0",
-      "@vaadin/vaadin-app-layout": "20.0.0",
-      "@vaadin/vaadin-avatar": "20.0.0",
-      "@vaadin/vaadin-board": "20.0.0",
-      "@vaadin/vaadin-button": "20.0.0",
-      "@vaadin/vaadin-charts": "20.0.0",
-      "@vaadin/vaadin-checkbox": "20.0.0",
-      "@vaadin/vaadin-combo-box": "20.0.0",
-      "@vaadin/vaadin-confirm-dialog": "20.0.0",
-      "@vaadin/vaadin-context-menu": "20.0.0",
-      "@vaadin/vaadin-control-state-mixin": "20.0.0",
-      "@vaadin/vaadin-cookie-consent": "20.0.0",
-      "@vaadin/vaadin-core-shrinkwrap": "20.0.3",
-      "@vaadin/vaadin-crud": "20.0.0",
-      "@vaadin/vaadin-custom-field": "20.0.0",
-      "@vaadin/vaadin-date-picker": "20.0.0",
-      "@vaadin/vaadin-date-time-picker": "20.0.0",
-      "@vaadin/vaadin-details": "20.0.0",
+      "@vaadin/vaadin-accordion": "20.0.5",
+      "@vaadin/vaadin-app-layout": "20.0.5",
+      "@vaadin/vaadin-avatar": "20.0.5",
+      "@vaadin/vaadin-board": "20.0.5",
+      "@vaadin/vaadin-button": "20.0.5",
+      "@vaadin/vaadin-charts": "20.0.5",
+      "@vaadin/vaadin-checkbox": "20.0.5",
+      "@vaadin/vaadin-combo-box": "20.0.5",
+      "@vaadin/vaadin-confirm-dialog": "20.0.5",
+      "@vaadin/vaadin-context-menu": "20.0.5",
+      "@vaadin/vaadin-control-state-mixin": "20.0.5",
+      "@vaadin/vaadin-cookie-consent": "20.0.5",
+      "@vaadin/vaadin-core-shrinkwrap": "20.0.8",
+      "@vaadin/vaadin-crud": "20.0.5",
+      "@vaadin/vaadin-custom-field": "20.0.5",
+      "@vaadin/vaadin-date-picker": "20.0.5",
+      "@vaadin/vaadin-date-time-picker": "20.0.5",
+      "@vaadin/vaadin-details": "20.0.5",
       "@vaadin/vaadin-development-mode-detector": "2.0.4",
-      "@vaadin/vaadin-dialog": "20.0.0",
-      "@vaadin/vaadin-element-mixin": "20.0.0",
-      "@vaadin/vaadin-form-layout": "20.0.0",
-      "@vaadin/vaadin-grid": "20.0.0",
-      "@vaadin/vaadin-grid-pro": "20.0.0",
-      "@vaadin/vaadin-icons": "20.0.0",
-      "@vaadin/vaadin-item": "20.0.0",
-      "@vaadin/vaadin-list-box": "20.0.0",
-      "@vaadin/vaadin-list-mixin": "20.0.0",
-      "@vaadin/vaadin-login": "20.0.0",
-      "@vaadin/vaadin-lumo-styles": "20.0.0",
-      "@vaadin/vaadin-material-styles": "20.0.0",
-      "@vaadin/vaadin-menu-bar": "20.0.0",
-      "@vaadin/vaadin-messages": "20.0.0",
-      "@vaadin/vaadin-notification": "20.0.0",
-      "@vaadin/vaadin-ordered-layout": "20.0.0",
-      "@vaadin/vaadin-overlay": "20.0.0",
-      "@vaadin/vaadin-progress-bar": "20.0.0",
-      "@vaadin/vaadin-radio-button": "20.0.0",
-      "@vaadin/vaadin-rich-text-editor": "20.0.0",
-      "@vaadin/vaadin-select": "20.0.0",
-      "@vaadin/vaadin-shrinkwrap": "20.0.3",
-      "@vaadin/vaadin-split-layout": "20.0.0",
-      "@vaadin/vaadin-tabs": "20.0.0",
-      "@vaadin/vaadin-text-field": "20.0.0",
-      "@vaadin/vaadin-themable-mixin": "20.0.0",
-      "@vaadin/vaadin-time-picker": "20.0.0",
-      "@vaadin/vaadin-upload": "20.0.0",
+      "@vaadin/vaadin-dialog": "20.0.5",
+      "@vaadin/vaadin-element-mixin": "20.0.5",
+      "@vaadin/vaadin-form-layout": "20.0.5",
+      "@vaadin/vaadin-grid": "20.0.5",
+      "@vaadin/vaadin-grid-pro": "20.0.5",
+      "@vaadin/vaadin-icons": "20.0.5",
+      "@vaadin/vaadin-item": "20.0.5",
+      "@vaadin/vaadin-list-box": "20.0.5",
+      "@vaadin/vaadin-list-mixin": "20.0.5",
+      "@vaadin/vaadin-login": "20.0.5",
+      "@vaadin/vaadin-lumo-styles": "20.0.5",
+      "@vaadin/vaadin-material-styles": "20.0.5",
+      "@vaadin/vaadin-menu-bar": "20.0.5",
+      "@vaadin/vaadin-messages": "20.0.5",
+      "@vaadin/vaadin-notification": "20.0.5",
+      "@vaadin/vaadin-ordered-layout": "20.0.5",
+      "@vaadin/vaadin-overlay": "20.0.5",
+      "@vaadin/vaadin-progress-bar": "20.0.5",
+      "@vaadin/vaadin-radio-button": "20.0.5",
+      "@vaadin/vaadin-rich-text-editor": "20.0.5",
+      "@vaadin/vaadin-select": "20.0.5",
+      "@vaadin/vaadin-shrinkwrap": "20.0.8",
+      "@vaadin/vaadin-split-layout": "20.0.5",
+      "@vaadin/vaadin-tabs": "20.0.5",
+      "@vaadin/vaadin-text-field": "20.0.5",
+      "@vaadin/vaadin-themable-mixin": "20.0.5",
+      "@vaadin/vaadin-time-picker": "20.0.5",
+      "@vaadin/vaadin-upload": "20.0.5",
       "@vaadin/vaadin-usage-statistics": "2.1.0",
       "@webcomponents/shadycss": "1.9.6",
       "construct-style-sheets-polyfill": "2.4.16",
@@ -187,14 +187,14 @@
       "typescript": "4.2.3",
       "validator": "13.1.17",
       "webpack": "4.46.0",
-      "webpack-cli": "3.3.11",
+      "webpack-cli": "3.3.12",
       "webpack-dev-server": "3.11.0",
       "webpack-manifest-plugin": "3.0.0",
       "webpack-merge": "4.2.2",
-      "workbox-core": "6.1.0",
-      "workbox-precaching": "6.1.0",
-      "workbox-webpack-plugin": "6.1.0"
+      "workbox-core": "6.2.0",
+      "workbox-precaching": "6.2.0",
+      "workbox-webpack-plugin": "6.2.0"
     },
-    "hash": "abdc907f5f45a94bbe752f8093af09ceb35513f552915169a1dbf36c8150ed8d"
+    "hash": "4e4e3c316aa291a448e741a74a6453a9ec52fd95674e1fc36989bd7d6fc2ec1a"
   }
 }
