--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.mustache.check-template-location=false
 # User Identification Token
 seacreeper.craftsperson.user.token=crafter
 seacreeper.scribes.baseUrl=http://localhost:8085/
+seacreeper.scribe.postmannewman.baseUrl=http://localhost:9080/
 seacreeper.queen.baseUrl=http://localhost:8080/
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
